--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "0.1.2-alpha.0",
   "private": true,
   "dependencies": {
+    "@blend-ui/core": "1.1.4-alpha.0",
+    "@blend-ui/icons": "1.1.4-alpha.0",
+    "@blend-ui/progress": "1.0.3-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
+    "@popperjs/core": "^2.4.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-amplify": "^3.3.2",
+    "aws-amplify-react": "^4.2.6",
+    "google-libphonenumber": "^3.2.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-popper": "^2.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
@@ -38,13 +48,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^6.0.21",
-    "@storybook/addon-docs": "^6.0.21",
-    "@storybook/addon-knobs": "^6.0.21",
-    "@storybook/addon-links": "^6.0.21",
-    "@storybook/addons": "^6.0.21",
-    "@storybook/react": "^6.0.21",
+    "@iconify/icons-fe": "^1.0.5",
+    "@storybook/addon-actions": "v6.1.0-alpha.14",
+    "@storybook/addon-docs": "v6.1.0-alpha.14",
+    "@storybook/addon-knobs": "v6.1.0-alpha.14",
+    "@storybook/addon-links": "v6.1.0-alpha.14",
+    "@storybook/addons": "v6.1.0-alpha.14",
+    "@storybook/react": "v6.1.0-alpha.14",
     "@styled-system/prop-types": "^5.1.5",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
