--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.2-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.4-alpha.0",
+    "@blend-ui/core": "1.1.10-alpha.0",
     "@blend-ui/icons": "1.1.4-alpha.0",
+    "@blend-ui/modal": "1.0.5-alpha.0",
     "@blend-ui/progress": "1.0.3-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
