--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.2-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.14-alpha.0",
+    "@blend-ui/core": "1.1.27-alpha.0",
     "@blend-ui/icons": "1.1.4-alpha.0",
     "@blend-ui/modal": "1.0.5-alpha.0",
     "@blend-ui/progress": "1.0.3-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
     "@popperjs/core": "^2.4.4",
+    "@reach/auto-id": "^0.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
