--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.6-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.28-alpha.0",
+    "@blend-ui/core": "1.1.29-alpha.0",
     "@blend-ui/icons": "1.1.4-alpha.0",
     "@blend-ui/modal": "1.0.5-alpha.0",
     "@blend-ui/progress": "1.0.3-alpha.0",
@@ -23,7 +23,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
