--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "app-desktop",
-  "version": "0.1.8-alpha.0",
+  "version": "0.1.6-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.29-alpha.0",
+    "@blend-ui/core": "1.1.28-alpha.0",
     "@blend-ui/icons": "1.1.4-alpha.0",
     "@blend-ui/modal": "1.0.5-alpha.0",
     "@blend-ui/progress": "1.0.3-alpha.0",
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^3.3.2",
     "aws-amplify-react": "^4.2.6",
+    "flexboxgrid": "^6.3.1",
     "google-libphonenumber": "^3.2.13",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,8 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "styled-system": "^5.1.5",
-    "uuid": "^8.3.1"
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
