--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.12-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.36-alpha.0",
+    "@blend-ui/core": "1.1.40-alpha.0",
     "@blend-ui/icons": "1.1.4-alpha.0",
     "@blend-ui/modal": "1.0.5-alpha.0",
     "@blend-ui/progress": "1.0.3-alpha.0",
     "@blend-ui/tabs":"1.0.2-alpha.0",
+    "@blend-ui/toast":"0.0.8-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
     "@popperjs/core": "^2.4.4",
@@ -53,12 +54,12 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@iconify/icons-fe": "^1.0.5",
-    "@storybook/addon-actions": "v6.1.0-alpha.14",
-    "@storybook/addon-docs": "v6.1.0-alpha.14",
-    "@storybook/addon-knobs": "v6.1.0-alpha.14",
-    "@storybook/addon-links": "v6.1.0-alpha.14",
-    "@storybook/addons": "v6.1.0-alpha.14",
-    "@storybook/react": "v6.1.0-alpha.14",
+    "@storybook/addon-actions": "v6.1.0-rc.4",
+    "@storybook/addon-docs": "v6.1.0-rc.4",
+    "@storybook/addon-knobs": "v6.1.0-rc.4",
+    "@storybook/addon-links": "v6.1.0-rc.4",
+    "@storybook/addons": "v6.1.0-rc.4",
+    "@storybook/react": "v6.1.0-rc.4",
     "@styled-system/prop-types": "^5.1.5",
     "babel-loader": "^8.1.0",
     "react-test-renderer": "^16.13.1"
