--- a/package.json
+++ b/package.json
@@ -3,30 +3,39 @@
   "version": "0.1.19-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.55-alpha.0",
-    "@blend-ui/css-grid": "1.0.4-alpha.0",
+    "@blend-ui/core": "1.1.57-alpha.0",
+    "@blend-ui/css-grid": "1.0.6-alpha.0",
     "@blend-ui/floating-user-menu": "0.0.14-alpha.0",
-    "@blend-ui/icons": "1.1.6-alpha.0",
-    "@blend-ui/modal": "1.0.8-alpha.0",
-    "@blend-ui/progress": "1.0.6-alpha.0",
-    "@blend-ui/tabs": "1.0.7-alpha.0",
-    "@blend-ui/toast": "0.0.11-alpha.0",
+    "@blend-ui/icons": "1.1.8-alpha.0",
+    "@blend-ui/modal": "1.0.10-alpha.0",
+    "@blend-ui/progress": "1.0.7-alpha.0",
+    "@blend-ui/tabs": "1.0.9-alpha.0",
+    "@blend-ui/toast": "0.0.12-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
+    "@paciolan/remote-component": "^2.11.0",
     "@popperjs/core": "^2.4.4",
+    "@prifina/hooks": "^0.0.61",
     "@reach/auto-id": "^0.12.1",
+    "@styled-system/theme-get": "^5.1.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "aws-amplify": "^3.3.2",
-    "aws-amplify-react": "^4.2.6",
+    "aws-appsync": "^4.0.3",
     "core-js": "3",
     "google-libphonenumber": "^3.2.13",
+    "html2canvas": "^1.0.0-rc.7",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
+    "react-dnd": "^13.1.0",
+    "react-dnd-html5-backend": "^12.1.1",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "short-uuid": "^4.1.0",
     "styled-components": "^5.2.0",
     "styled-system": "^5.1.5",
     "uuid": "^8.3.1"
@@ -56,7 +65,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@iconify/icons-fe": "^1.0.5",
     "@storybook/addon-actions": "^6.1.14",
     "@storybook/addon-docs": "v6.1.14",
     "@storybook/addon-essentials": "^6.1.14",
