--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,11 @@
     "plugins": [
         "react","react-hooks"
     ],
+    "settings": {
+        "react":{
+            "version":"detect"
+        }
+    },
     "rules": {
         "react/display-name": 1,
         "react/forbid-prop-types": 1,
