--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "core-js": "3",
     "google-libphonenumber": "^3.2.13",
     "html2canvas": "^1.0.0-rc.7",
+    "i18n-iso-countries": "^6.6.0",
     "immutability-helper": "^3.1.1",
+    "intl": "^1.2.5",
+    "libphonenumber-js": "^1.9.15",
     "react": "^17.0.1",
     "react-dnd": "^13.1.0",
     "react-dnd-html5-backend": "^12.1.1",
@@ -75,6 +78,8 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "@styled-system/prop-types": "^5.1.5",
-    "react-test-renderer": "^17.0.1"
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "react-test-renderer": "^17.0.1",
+    "webpack-bundle-analyzer": "^4.4.0"
   }
 }
