--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.21-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.57-alpha.0",
+    "@blend-ui/core": "1.1.58-alpha.0",
     "@blend-ui/css-grid": "1.0.6-alpha.0",
     "@blend-ui/floating-user-menu": "0.0.14-alpha.0",
     "@blend-ui/icons": "1.1.8-alpha.0",
     "@blend-ui/modal": "1.0.10-alpha.0",
     "@blend-ui/progress": "1.0.7-alpha.0",
-    "@blend-ui/tabs": "1.0.9-alpha.0",
+    "@blend-ui/tabs": "1.0.10-alpha.0",
     "@blend-ui/toast": "0.0.12-alpha.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
     "@paciolan/remote-component": "^2.11.0",
     "@popperjs/core": "^2.4.4",
-    "@prifina/hooks": "^0.0.61",
+    "@prifina/hooks": "^0.0.62",
     "@reach/auto-id": "^0.12.1",
     "@styled-system/theme-get": "^5.1.2",
     "@testing-library/jest-dom": "^5.11.9",
@@ -30,6 +30,8 @@
     "immutability-helper": "^3.1.1",
     "intl": "^1.2.5",
     "libphonenumber-js": "^1.9.15",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
     "react-dnd": "^13.1.0",
     "react-dnd-html5-backend": "^12.1.1",
