--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.22-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.59-alpha.0",
+    "@blend-ui/core": "1.1.60-alpha.0",
     "@blend-ui/css-grid": "1.0.6-alpha.0",
-    "@blend-ui/floating-user-menu": "0.0.14-alpha.0",
     "@blend-ui/icons": "1.1.8-alpha.0",
     "@blend-ui/modal": "1.0.10-alpha.0",
     "@blend-ui/progress": "1.0.7-alpha.0",
@@ -25,6 +24,7 @@
     "aws-appsync": "^4.0.3",
     "core-js": "3",
     "google-libphonenumber": "^3.2.13",
+    "graphql-tag": "^2.11.0",
     "html2canvas": "^1.0.0-rc.7",
     "i18n-iso-countries": "^6.6.0",
     "immutability-helper": "^3.1.1",
@@ -33,8 +33,8 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
-    "react-dnd": "^13.1.0",
-    "react-dnd-html5-backend": "^12.1.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.3",
     "react-router-dom": "^5.2.0",
@@ -80,8 +80,10 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.14",
     "@styled-system/prop-types": "^5.1.5",
+    "@svgr/webpack": "^5.5.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "react-test-renderer": "^17.0.1",
+    "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.4.0"
   }
 }
