--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.29-alpha.0",
   "private": true,
   "dependencies": {
-    "@blend-ui/core": "1.1.60-alpha.0",
+    "@blend-ui/core": "1.1.63-alpha.0",
     "@blend-ui/css-grid": "1.0.6-alpha.0",
     "@blend-ui/icons": "1.1.8-alpha.0",
     "@blend-ui/modal": "1.0.10-alpha.0",
     "@blend-ui/progress": "1.0.7-alpha.0",
     "@blend-ui/tabs": "1.0.11-alpha.0",
     "@blend-ui/toast": "0.0.12-alpha.0",
+    "@iconify-icons/emojione-v1": "^1.1.0",
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
     "@paciolan/remote-component": "^2.11.0",
@@ -23,10 +24,10 @@
     "aws-amplify": "^3.3.2",
     "aws-appsync": "^4.0.3",
     "core-js": "3",
-    "google-libphonenumber": "^3.2.13",
+    "countries-list": "^2.6.1",
+    "crypto-js": "^4.0.0",
     "graphql-tag": "^2.11.0",
     "html2canvas": "^1.0.0-rc.7",
-    "i18n-iso-countries": "^6.6.0",
     "immutability-helper": "^3.1.1",
     "intl": "^1.2.5",
     "libphonenumber-js": "^1.9.15",
