--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "packages/*"
   ],
   "devDependencies": {
+    "husky": "^7.0.0",
     "lerna": "^4.0.0"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
