--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "husky": "^7.0.0",
     "lerna": "^4.0.0"
   },
-  "scripts": {
+  "scriptsComments": {
     "prepare": "husky install"
-  }
+  },
 }
