--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -33,8 +33,7 @@
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
-    "babel-plugin-styled-components": "^1.13.2",
-    "cross-env": "^7.0.3"
+    "babel-plugin-styled-components": "^1.13.2"
   },
   "dependencies": {
     "@blend-ui/core": "1.1.64-alpha.0",
