--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@notionhq/client": "^0.4.13",
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
