test env scripts

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.51.0",
+    "@aws-sdk/client-dynamodb": "^3.51.0",
+    "@aws-sdk/client-sts": "^3.51.0",
+    "@aws-sdk/lib-dynamodb": "^3.51.0",
     "husky": "^7.0.0",
     "lerna": "^4.0.0"
   }
