--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -12,8 +12,8 @@
     "dist"
   ],
   "scripts": {
-    "start": "cross-env PORT=3000 react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env PORT=3000 react-app-rewired start",
+    "build": "react-app-rewired build",
     "storybook": "start-storybook"
   },
   "devDependencies": {
@@ -32,8 +32,9 @@
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
-    "babel-plugin-styled-components": "^1.13.2",
-    "prop-types": "^15.8.1"
+    "babel-plugin-styled-components": "^2.0.7",
+    "prop-types": "^15.8.1",
+    "react-app-rewired": "^2.2.1"
   },
   "dependencies": {
     "@blend-ui/core": "1.1.64-alpha.0",
@@ -51,12 +52,14 @@
     "@prifina/hooks": "^0.0.62",
     "@reach/auto-id": "^0.16.0",
     "@react-spring/web": "^9.4.4",
-    "@svgr/webpack": "^5.5.0",
+    "@styled-system/theme-get": "^5.1.2",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "aws-amplify": "^4.3.3",
-    "aws-appsync": "^4.1.4",
+    "aws-amplify": "^4.3.19",
+    "aws-appsync": "^4.1.5",
     "crypto-js": "^4.1.1",
     "graphql-tag": "^2.12.5",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
@@ -69,6 +72,8 @@
     "react-spring": "^9.2.4",
     "react-table": "^7.7.0",
     "short-uuid": "^4.2.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "url-loader": "^4.1.1",
