--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -35,7 +35,8 @@
     "@blend-ui/icons": "1.1.8-alpha.0",
     "@iconify/icons-bx": "^1.1.2",
     "@reach/auto-id": "^0.16.0",
-    "aws-amplify": "^4.3.3",
+    "@styled-system/theme-get": "^5.1.2",
+    "aws-amplify": "^4.3.19",
     "graphql-tag": "^2.12.5",
     "react": ">=16.8.6",
     "react-dom": ">=16.8.6",
