--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,15 +4,16 @@
   "description": "Utils",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
-  "main": "dist/esm/index.js",
+  "main": "dist/cjs/index.js",
   "publishConfig": {
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
-    "build": "yarn build:cjs && yarn build:es && yarn build:esm",
+    "build": "rm -rf ./dist && GENERATE_SOURCEMAP=false && yarn build:cjs",
     "build:esm": "cross-env NODE_ENV=production BABEL_ENV=esm babel ./src --out-dir ./dist/esm",
     "build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs babel ./src --out-dir ./dist/cjs",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=es babel ./src --out-dir ./dist/es",
@@ -27,8 +28,8 @@
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
     "prop-types": "^15.7.2",
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "@blend-ui/core": "1.1.64-alpha.0",
@@ -38,8 +39,8 @@
     "@styled-system/theme-get": "^5.1.2",
     "aws-amplify": "^4.3.19",
     "graphql-tag": "^2.12.5",
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
