new blend changes

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -37,13 +37,15 @@
     "react-app-rewired": "^2.2.1"
   },
   "dependencies": {
-    "@blend-ui/core": "1.1.67-alpha.0",
+    "@blend-ui/icon-field":"^1.0.1-alpha.0",
+    "@blend-ui/search-select":"^1.0.1-alpha.0",
+    "@blend-ui/core": "1.1.68-alpha.0",
     "@blend-ui/css-grid": "1.0.7-alpha.0",
     "@blend-ui/icons": "1.1.9-alpha.0",
-    "@blend-ui/modal": "1.0.13-alpha.0",
-    "@blend-ui/progress": "1.0.11-alpha.0",
-    "@blend-ui/tabs": "1.0.16-alpha.0",
-    "@blend-ui/toast": "0.0.15-alpha.0",
+    "@blend-ui/modal": "1.0.14-alpha.0",
+    "@blend-ui/progress": "1.0.12-alpha.0",
+    "@blend-ui/tabs": "1.0.17-alpha.0",
+    "@blend-ui/toast": "0.0.16-alpha.0",
     "@iconify-icons/emojione-v1": "^1.2.2",
     "@iconify/react": "^3.2.1",
     "@paciolan/remote-component": "^2.12.1",
