--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -37,37 +37,45 @@
     "react-app-rewired": "^2.2.1"
   },
   "dependencies": {
-    "@blend-ui/icon-field":"^1.0.1-alpha.0",
-    "@blend-ui/search-select":"^1.0.1-alpha.0",
-    "@blend-ui/auto-complete":"^1.0.1-alpha.0",
     "@blend-ui/core": "1.1.68-alpha.0",
     "@blend-ui/css-grid": "1.0.7-alpha.0",
+    "@blend-ui/icon-field": "^1.0.1-alpha.0",
     "@blend-ui/icons": "1.1.9-alpha.0",
     "@blend-ui/modal": "1.0.14-alpha.0",
     "@blend-ui/progress": "1.0.12-alpha.0",
+    "@blend-ui/search-select": "^1.0.1-alpha.0",
     "@blend-ui/tabs": "1.0.17-alpha.0",
     "@blend-ui/toast": "0.0.16-alpha.0",
     "@iconify-icons/emojione-v1": "^1.2.2",
+    "@iconify/icons-bx": "^1.2.3",
+    "@iconify/icons-fe": "^1.2.1",
+    "@iconify/icons-mdi": "^1.2.17",
     "@iconify/react": "^3.2.1",
     "@paciolan/remote-component": "^2.12.1",
     "@prifina-apps/utils": "^0.0.10-beta.0",
-    
+    "@popperjs/core": "^2.9.2",
     "@prifina/hooks": "^0.0.63",
+    "@reach/auto-id": "^0.16.0",
     "@react-spring/web": "^9.4.4",
     "@styled-system/theme-get": "^5.1.2",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.14.1",
+    "aria-hidden": "^1.1.1",
     "aws-amplify": "^4.3.19",
     "aws-appsync": "^4.1.5",
+    "body-scroll-lock": "^3.1.5",
     "crypto-js": "^4.1.1",
+    "exenv": "^1.2.2",
     "graphql-tag": "^2.12.5",
     "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^17.0.2",
+    "react-grid-layout": "^1.3.4",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
@@ -77,19 +85,10 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
+    "styled-css-grid": "^1.2.1",
     "styled-system": "^5.1.5",
     "url-loader": "^4.1.1",
-    "uuid": "^8.3.2",
-
-    "@iconify/icons-bx": "^1.2.3",
-    "@iconify/icons-fe": "^1.2.1",
-    "@iconify/icons-mdi": "^1.2.17",
-    "@popperjs/core": "^2.9.2",
-    "@reach/auto-id": "^0.16.0",
-    "styled-css-grid": "^1.2.1",
-    "aria-hidden": "^1.1.1",
-    "body-scroll-lock": "^3.1.5",
-    "exenv": "^1.2.2"
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
