--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -49,13 +49,10 @@
   "dependencies": {
     "@aws-sdk/client-appsync": "^3.43.0",
     "@blend-ui/avatar": "^1.0.1-alpha.0",
-    "add": "^2.0.6",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "countries-list": "^2.6.1",
-    "cross-env": "^7.0.3",
-    "libphonenumber-js": "1.9.51",
-    "yarn": "^1.22.19"
+    "libphonenumber-js": "1.9.51"
   }
 }
