--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,10 +27,10 @@
     "@babel/preset-react": "^7.14.5",
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "cross-env": "^7.0.3"
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "@blend-ui/core": "1.1.68-alpha.0",
