--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prifina-apps/utils",
-  "version": "0.0.11-beta.0",
+  "version": "0.0.12-beta.0",
   "description": "Utils",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
@@ -30,8 +30,7 @@
     "cross-env": "^7.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "cross-env": "^7.0.3"
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "@blend-ui/core": "1.1.68-alpha.0",
