--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -12,14 +12,18 @@
     "dist"
   ],
   "scripts": {
-    "start": "GENERATE_SOURCEMAP=false && cross-env PORT=3000 react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "cross-env PORT=3000 node ./scripts/start.js",
+    "build": "node ./scripts/build.js",
+    "xxstart": "react-scripts start",
+    "xstart": "GENERATE_SOURCEMAP=false && cross-env PORT=3000 react-app-rewired start",
+    "xbuild": "react-app-rewired build",
     "storybook": "start-storybook"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-transform-react-jsx-source": "^7.18.6",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@notionhq/client": "^1.0.4",
@@ -33,8 +37,8 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-styled-components": "^2.0.7",
-    "prop-types": "^15.8.1",
-    "react-app-rewired": "^2.2.1"
+    "copy-webpack-plugin": "^11.0.0",
+    "prop-types": "^15.8.1"
   },
   "dependencies": {
     "@blend-ui/core": "1.1.68-alpha.0",
@@ -51,10 +55,10 @@
     "@iconify/icons-fe": "^1.2.1",
     "@iconify/icons-mdi": "^1.2.17",
     "@iconify/react": "^3.2.1",
-    "@paciolan/remote-component": "^2.12.1",
     "@popperjs/core": "^2.9.2",
+    "@prifina-apps/remote": "^0.0.0-alpha.1",
     "@prifina-apps/utils": "^0.0.2-alpha.0",
-    "@prifina/hooks": "^0.0.63",
+    "@prifina/hooks-v2": "^0.0.2",
     "@reach/auto-id": "^0.16.0",
     "@react-spring/web": "^9.4.4",
     "@styled-system/theme-get": "^5.1.2",
@@ -63,7 +67,7 @@
     "aria-hidden": "^1.1.1",
     "aws-amplify": "^4.3.19",
     "aws-appsync": "^4.1.5",
-    "body-scroll-lock": "^3.1.5",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "crypto-js": "^4.1.1",
     "exenv": "^1.2.2",
     "graphql-tag": "^2.12.5",
@@ -71,21 +75,20 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-popper": "^2.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "react-spring": "^9.2.4",
     "react-table": "^7.7.0",
     "short-uuid": "^4.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.5",
-    "styled-css-grid": "^1.2.1",
     "styled-system": "^5.1.5",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2"
