--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -13,8 +13,8 @@
   },
   "main": "dist/cjs/index.js",
   "scripts": {
-    "build": "rimraf dist && GENERATE_SOURCEMAP=false && yarn build:cjs",
-    "build:cjs": "cross-env NODE_ENV=production BABEL_ENV=cjs babel ./src --out-dir ./dist/cjs",
+    "build": "rimraf dist && GENERATE_SOURCEMAP=true && yarn build:cjs",
+    "build:cjs": "cross-env NODE_ENV=development BABEL_ENV=cjs babel ./src --out-dir ./dist/cjs",
     "xbuild": "node_modules/.bin/webpack --config webpack.config.js --mode=production",
     "xdev": "node_modules/.bin/webpack --config webpack.config.js --mode=development",
     "watch": "node_modules/.bin/webpack --config webpack.config.js --mode=development -w",
@@ -32,7 +32,7 @@
     "webpack-dev-server": "4.5.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
