--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -29,14 +29,15 @@
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "@blend-ui/core": "1.1.68-alpha.0",
-    "@blend-ui/icons": "1.1.9-alpha.0",
+    "@blend-ui/icons": "1.1.10-alpha.0",
     "@blend-ui/modal": "1.0.14-alpha.0",
     "@iconify/icons-bx": "^1.2.3",
+    "@iconify/icons-fe": "^1.2.1",
     "@reach/auto-id": "^0.16.0",
     "@styled-system/theme-get": "^5.1.2",
     "aws-amplify": "^4.3.19",
