--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -38,7 +38,9 @@
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-styled-components": "^2.0.7",
     "copy-webpack-plugin": "^11.0.0",
-    "prop-types": "^15.8.1"
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "prop-types": "^15.8.1",
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "dependencies": {
     "@blend-ui/auto-complete": "^1.0.1-alpha.0",
