admin app& TDD framework

--- a/packages/admin-app/package.json
+++ b/packages/admin-app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@prifina-apps/desktop-app",
-  "version": "0.0.12-beta.0",
-  "description": "Desktop App",
+  "name": "@prifina-apps/admin-app",
+  "version": "0.0.0",
+  "description": "Admin App",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
   "main": "dist/esm/index.js",
@@ -12,20 +12,23 @@
     "dist"
   ],
   "scripts": {
-    "start": "cross-env PORT=3000 node ./scripts/start.js",
+    "start": "cross-env PORT=3002 node ./scripts/start.js",
     "build": "node ./scripts/build.js",
-    "xxstart": "react-scripts start",
-    "xstart": "GENERATE_SOURCEMAP=false && cross-env PORT=3000 react-app-rewired start",
-    "xbuild": "react-app-rewired build",
-    "storybook": "start-storybook -p 6006 -s public"
+    "test": "./node_modules/.bin/jest --env=jsdom",
+    "test-utils": "./node_modules/.bin/jest src/utils/__tests__/",
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public",
+    "test-storybook": "test-storybook"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.17.8",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-transform-react-jsx-source": "^7.18.6",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@notionhq/client": "^1.0.4",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -40,17 +43,32 @@
     "@storybook/test-runner": "^0.4.0",
     "@storybook/testing-library": "^0.0.13",
     "@styled-system/prop-types": "^5.1.5",
-    "babel-jest": "^27.1.1",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "^28.1.1",
+    "babel-plugin-named-exports-order": "^0.0.2",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-styled-components": "^2.0.7",
     "copy-webpack-plugin": "^11.0.0",
-    "msw": "^0.47.4",
-    "msw-storybook-addon": "^1.6.3",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.12",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.8.1",
+    "react-test-renderer": "^18.2.0",
+    "simple-zustand-devtools": "^1.1.0",
     "storybook-module-federation": "^0.6.2",
-    "webpack-bundle-analyzer": "^4.6.1"
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@blend-ui/auto-complete": "^1.0.1-alpha.0",
@@ -58,13 +76,12 @@
     "@blend-ui/css-grid": "1.0.7-alpha.0",
     "@blend-ui/icon-field": "^1.0.1-alpha.0",
     "@blend-ui/icons": "^1.1.10-alpha.0",
+    "@blend-ui/list-item": "^0.0.10-alpha.0",
     "@blend-ui/modal": "1.0.14-alpha.0",
     "@blend-ui/progress": "1.0.12-alpha.0",
-    "@blend-ui/search-select": "^1.0.6-alpha.0",
+    "@blend-ui/search-select": "^1.0.1-alpha.0",
     "@blend-ui/tabs": "1.0.17-alpha.0",
     "@blend-ui/toast": "0.0.16-alpha.0",
-    "@floating-ui/react-dom": "^1.0.0",
-    "@floating-ui/react-dom-interactions": "^0.10.1",
     "@iconify-icons/emojione-v1": "^1.2.2",
     "@iconify/icons-bx": "^1.2.3",
     "@iconify/icons-fe": "^1.2.1",
@@ -95,7 +112,7 @@
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
-    "react-popper": "^2.3.0",
+    "react-popper": "^2.2.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.2.4",
@@ -106,8 +123,7 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "url-loader": "^4.1.1",
-    "uuid": "^8.3.2",
-    "zustand": "^4.1.2"
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
@@ -120,8 +136,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
