--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -54,6 +54,8 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "countries-list": "^2.6.1",
-    "libphonenumber-js": "1.9.51"
+    "libphonenumber-js": "1.9.51",
+    "simple-zustand-devtools": "^1.1.0",
+    "zustand": "^4.1.2"
   }
 }
