--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prifina-apps/desktop-app",
-  "version": "0.0.12-beta.0",
+  "version": "0.0.12-alpha.0",
   "description": "Desktop App",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
@@ -71,8 +71,8 @@
     "@iconify/icons-mdi": "^1.2.17",
     "@iconify/react": "^3.2.1",
     "@popperjs/core": "^2.9.2",
-    "@prifina-apps/remote": "^0.0.0-beta.1",
-    "@prifina-apps/utils": "^0.0.12-beta.0",
+    "@prifina-apps/remote": "^0.0.0-alpha.1",
+    "@prifina-apps/utils": "^0.0.12-alpha.0",
     "@prifina/hooks-v2": "^0.0.4",
     "@reach/auto-id": "^0.16.0",
     "@react-spring/web": "^9.4.4",
@@ -96,7 +96,7 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-popper": "^2.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.2.4",
     "react-table": "^7.7.0",
