--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prifina-apps/remote",
-  "version": "0.0.0-beta.1",
+  "version": "0.0.0-alpha.1",
   "description": "Remote components",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
