--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prifina-apps/utils",
-  "version": "0.0.12-beta.0",
+  "version": "0.0.12-alpha.0",
   "description": "Utils",
   "author": "Tero <tero@prifina.com>",
   "license": "MIT",
