--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -14,6 +14,7 @@
   "main": "dist/cjs/index.js",
   "scripts": {
     "build": "rimraf dist && GENERATE_SOURCEMAP=true && yarn build:cjs",
+    "winbuild": "del -rf \"./dist\" && set \"GENERATE_SOURCEMAP=false\" && yarn build:cjs",
     "build:cjs": "cross-env NODE_ENV=development BABEL_ENV=cjs babel ./src --out-dir ./dist/cjs",
     "xbuild": "node_modules/.bin/webpack --config webpack.config.js --mode=production",
     "xdev": "node_modules/.bin/webpack --config webpack.config.js --mode=development",
