admin app update cognito user fix

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -25,6 +25,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@svgr/cli": "^6.5.1",
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -36,6 +37,7 @@
     "@blend-ui/core": "1.1.68-alpha.0",
     "@blend-ui/icons": "1.1.10-alpha.0",
     "@blend-ui/modal": "1.0.14-alpha.0",
+    "@blend-ui/toast": "0.0.16-alpha.0",
     "@iconify/icons-bx": "^1.2.3",
     "@iconify/icons-fe": "^1.2.1",
     "@reach/auto-id": "^0.16.0",
