--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,16 +22,39 @@
   "devDependencies": {
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.17.8",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@notionhq/client": "^1.0.4",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/node-logger": "^6.5.12",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.12",
+    "@storybook/test-runner": "^0.4.0",
+    "@storybook/testing-library": "^0.0.13",
     "@svgr/cli": "^6.5.1",
     "babel-jest": "^27.1.1",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@blend-ui/core": "1.1.68-alpha.0",
+    "@blend-ui/icons": "1.1.10-alpha.0",
+    "@blend-ui/modal": "1.0.14-alpha.0",
+    "@blend-ui/toast": "0.0.16-alpha.0",
+    "@iconify/icons-bx": "^1.2.3",
+    "@iconify/icons-fe": "^1.2.1",
+    "@reach/auto-id": "^0.16.0",
+    "@styled-system/theme-get": "^5.1.2",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5"
   },
   "peerDependencies": {
     "@blend-ui/core": "1.1.68-alpha.0",
@@ -52,6 +75,7 @@
   "dependencies": {
     "@aws-sdk/client-appsync": "^3.43.0",
     "@blend-ui/avatar": "^1.0.1-alpha.0",
+    "@iconify-icons/emojione-v1": "^1.2.4",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
