pre alpha mockup environment

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -27,7 +27,9 @@
     "@babel/plugin-transform-react-jsx-source": "^7.18.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.14.5",
+    "@dynamic-data/oura-mockups": "^0.0.15",
     "@notionhq/client": "^1.0.4",
+    "@prifina-backend/utils": "^0.0.7",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
@@ -44,15 +46,21 @@
     "@svgr/cli": "^6.5.1",
     "babel-jest": "^27.1.1",
     "babel-loader": "^9.1.0",
+    "babel-loader-exclude-node-modules-except": "^1.2.1",
     "babel-plugin-react-docgen": "^4.2.1",
     "babel-plugin-styled-components": "^2.0.7",
     "copy-webpack-plugin": "^11.0.0",
+    "crypto-browserify": "^3.12.0",
     "msw": "^0.47.4",
     "msw-storybook-addon": "^1.6.3",
     "null-loader": "^4.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.8.1",
+    "socket.io-client": "^4.5.4",
     "storybook-module-federation": "^0.6.2",
+    "stream-browserify": "^3.0.0",
     "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.6.1"
   },
@@ -101,7 +109,7 @@
     "react-grid-layout": "^1.3.4",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "react-spring": "^9.2.4",
     "react-table": "^7.7.0",
     "short-uuid": "^4.2.0",
