--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "start": "cross-env PORT=3000 node ./scripts/start.js",
-    "build": "node ./scripts/build.js",
+    "build": "rm -rf build/ && node ./scripts/build.js",
     "xxstart": "react-scripts start",
     "xstart": "GENERATE_SOURCEMAP=false && cross-env PORT=3000 react-app-rewired start",
     "xbuild": "react-app-rewired build",
@@ -53,7 +53,6 @@
     "crypto-browserify": "^3.12.0",
     "msw": "^0.47.4",
     "msw-storybook-addon": "^1.6.3",
-    "null-loader": "^4.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "progress-bar-webpack-plugin": "^2.1.0",
@@ -86,7 +85,7 @@
     "@prifina-apps/remote": "^0.0.0-alpha.1",
     "@prifina-apps/ui-lib": "^0.0.1-alpha.0",
     "@prifina-apps/utils": "^0.0.12-alpha.0",
-    "@prifina/hooks-v2": "^0.0.4",
+    "@prifina/hooks-v2": "^0.0.6",
     "@reach/auto-id": "^0.16.0",
     "@react-spring/web": "^9.4.4",
     "@styled-system/theme-get": "^5.1.2",
@@ -119,6 +118,7 @@
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
     "url-loader": "^4.1.1",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^8.3.2",
     "zustand": "^4.1.2"
   },
@@ -136,5 +136,8 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
